--- a/po/it.po
+++ b/po/it.po
@@ -2,6 +2,7 @@
 # This file is distributed under the same license as the PACKAGE package.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER.
 # Francesco Tombolini <tombo@adamantio.net>, 2007.
+# fvalen <fvalen@fedoraproject.org>, 2013. #zanata
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
@@ -10,8 +11,8 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"PO-Revision-Date: 2010-08-09 09:30-0400\n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2013-01-01 06:17-0500\n"
+"Last-Translator: fvalen <fvalen@fedoraproject.org>\n"
 "Language-Team: <it@li.org>\n"
 "X-Generator: Zanata 2.0.2\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
@@ -34,40 +35,38 @@ msgid "%s"
 msgstr "%s"
 
 #: ../firstboot_kdump.py:241
-#, fuzzy
 msgid "Total System Memory (MB):"
-msgstr "_Memoria del sistema totale (MB):"
+msgstr "Memoria del sistema totale (MB):"
 
 #: ../firstboot_kdump.py:251
 msgid "Memory To Be _Reserved (MB):"
-msgstr ""
+msgstr "Memoria da _Riservare (MB):"
 
 #: ../firstboot_kdump.py:260
-#, fuzzy
 msgid "Usable System Memory (MB):"
-msgstr "Memoria del Sistema _Utilizzabile (MB):"
+msgstr "Memoria del Sistema Utilizzabile (MB):"
 
 #: ../firstboot_kdump.py:263
 msgid "Memory Currently Reserved (MB):"
-msgstr ""
+msgstr "Memoria attualmente riservata (MB):"
 
 #: ../firstboot_kdump.py:269
-#, fuzzy
 msgid "Kdump Memory Reservation:"
-msgstr "Memoria _Kdump (MB):"
+msgstr "Prenotazione Memoria di Kdump:"
 
 #: ../firstboot_kdump.py:270
 msgid "_Automatic"
-msgstr ""
+msgstr "_Automatica"
 
 #: ../firstboot_kdump.py:271
 msgid "_Manual"
-msgstr ""
+msgstr "_Manuale"
 
 #: ../firstboot_kdump.py:300
 msgid "\n"
 "Advanced kdump configuration"
-msgstr ""
+msgstr "\n"
+"Configurazione di kdump avanzata"
 
 #: ../firstboot_kdump.py:312
 msgid ""
@@ -97,14 +96,13 @@ msgid "Sorry, the %s architecture does not support kdump at this time!"
 msgstr "Spiacente, l'architettura %s non supporta kdump in questo momento!"
 
 #: ../firstboot_kdump.py:433
-#, fuzzy
 msgid ""
 "Changing Kdump settings requires rebooting the system to reallocate memory "
 "accordingly. Would you like to continue with this change and reboot the "
 "system after firstboot is complete?"
 msgstr ""
 "Cambiare le impostazioni di Kdump richiederà il riavvio del sistema per "
-"poter riassegnare la memoria. %sDesiderate continuare con il cambiamento e "
+"poter riassegnare la memoria. Desiderate continuare con il cambiamento e "
 "riavviare il sistema dopo che firstboot è stato completato?"
 
 #: ../firstboot_kdump.py:450
